# MagicTower

./: CMakeLists.txt  README.md  config.json
code/: CMakeLists.txt  Consts.cpp  Consts.h  Dialog.cpp  Dialog.h  DrawPanel.cpp  DrawPanel.h  Floor.cpp  Floor.h  FloorLoader.cpp  FloorLoader.h  Global.cpp  Global.h  Tower.cpp  Tower.h  main.cpp
code/objects/: Building.cpp  Building.h  Buildings.cpp  Buildings.h  Enemy.cpp  Enemy.h  Equip.cpp  Equip.h  Gems.cpp  Gems.h  Key.cpp  Key.h  MagicObject.cpp  MagicObject.h  NPC.cpp  NPC.h  NPCs.cpp  NPCs.h  Plant.cpp  Plant.h  Player.cpp  Player.h  Potion.cpp  Potion.h  Skill.cpp  Skill.h  Stair.cpp  Stair.h
code/tools/: ImageCreator.cpp  ImageCreator.h  MagicFactory.cpp  MagicFactory.h  WordingCreator.cpp  WordingCreator.h  WordingStore.cpp  WordingStore.h
code/utils/: TowerLog.cpp  TowerLog.h  Utility.cpp  Utility.h  XPrintf.cpp  XPrintf.h
font/: font.json
img/: pic.json
map/: floor_1.json  floor_2.json  map.json
res/: res.json
wording/: wording.json
